newtype-tools/tests/newtype-fail/struct-unit.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/newtype-fail/struct-unit.rs:2:1
  |
2 | struct Oranges;
  | ^^^^^^
