newtype-tools/tests/newtype-fail/struct-unit.rs
#[derive(newtype_tools::Newtype)]
struct Oranges;

fn main() {}
